# easysense.py

./: .gitignore  README.md  pyproject.toml
src/easysense/: __init__.py  cli.py  config.yaml  easysense.py  main.py
src/easysense/sensors/.example/: main.py  requirements.txt
